--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -39,4 +39,13 @@ th, td {
     text-align: center;
   }
 
+  .transaction_type {
+    padding-left: 100px;
+    text-align: left;
+  }
+
+  .transaction_type:first-letter {
+    text-transform: uppercase;
+  }
+
 
