--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -4,26 +4,35 @@
   width: 770px;
   padding: 15px;
   align-items: center;
-  background-color: #FFF;
+  background-color: #fff;
   border: 0.5px solid rgba(0, 0, 0, 0.5);
-  box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.5);
+  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
-.status{
-    display: block;
-    width: 14px;
-    height: 14px;
-    margin-right: 25px;
-    border-radius: 50%; 
+.status {
+  display: block;
+  width: 14px;
+  height: 14px;
+  margin-right: 25px;
+  border-radius: 50%;
 }
 
-.friend_avatar{
-    margin-right: 25px;
-    padding: 10px;
-    border-radius: 10px;
-    border: 0.5px solid rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 10px lightcoral;  
+.online {
+  composes: status;
+  background-color: green;
+}
 
+.offline {
+  composes: status;
+  background-color: red;
+}
+
+.friend_avatar {
+  margin-right: 25px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 0.5px solid rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px lightcoral;
 }
 .friend_name {
   font-weight: 600;
